# aom

./: .gitmodules  README.md
a2a/: .gitignore  .vercelignore  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  TODOS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
a2a/agent-a/: pyproject.toml
a2a/agent-a/aom_agent_a/: main.py
a2a/agent-b/: Dockerfile  pyproject.toml
a2a/agent-b/app/: engine.py  main.py
a2a/bridge/: Cargo.toml
a2a/bridge/src/: event.rs  hub.rs  main.rs  ring_rail.rs  rpc_rail.rs
a2a/bridge/tests/: ring_modes.rs  topic0_crosscheck.rs
a2a/common/: pyproject.toml
a2a/common/aom_common/: __init__.py  chain.py  event.py  hub_client.py  scenario.py
a2a/common/tests/: test_conformance.py
a2a/contracts/: foundry.toml
a2a/contracts/script/: Deploy.s.sol
a2a/contracts/src/: AgentEscrow.sol
a2a/contracts/test/: AgentEscrow.t.sol
a2a/data/concert/: report.json
a2a/data/flight-seat/: report.json
a2a/data/invoice-factoring/: report.json
a2a/data/peso-shield/: report.json
a2a/data/remittance/: report.json
a2a/data/snapshot/: capture.sample.json
a2a/data/toll/: report.json
a2a/docs/: prd.md
a2a/hub/: package.json  tsconfig.json
a2a/hub/src/: hub.test.ts  hub.ts
a2a/scenarios/: concert.json  flight-seat.json  invoice-factoring.json  peso-shield.json  remittance.json  scenarios.schema.json  toll.json
a2a/schema/: schema.json
a2a/scripts/: run-demo.sh  start-tunnel.sh
a2a/shared/: package.json  tsconfig.json
a2a/shared/abi/: AgentEscrow.json  events.json
a2a/shared/src/: event.ts  index.ts  scenario-node.ts  scenario.ts
a2a/tools/: package.json
a2a/tools/src/: _watch.mjs  conformance.test.ts  e2e.test.ts  mock-emitter.ts
a2a/ui/: index.html  package.json  preview.html  tsconfig.json  vite.config.ts
a2a/ui/src/: App.css  App.tsx  main.tsx  state.ts  tokens.css  useHub.ts  useScenario.ts  vite-env.d.ts
a2a/ui/src/components/: AgentMesh.css  AgentMesh.tsx  AgentPanel.css  AgentPanel.tsx  AgentShowcase.css  AgentShowcase.tsx  ChainLink.css  ChainLink.tsx  HowItWorks.css  HowItWorks.tsx  Idle.css  Idle.tsx  Landing.css  Landing.tsx  Ledger.css  Ledger.tsx  LogStream.css  LogStream.tsx  OnChainProof.css  OnChainProof.tsx  Output.css  Output.tsx  Panel.css  Panel.tsx  Roadmap.css  Roadmap.tsx  ScenarioGrid.css  ScenarioGrid.tsx  SeamRace.css  SeamRace.tsx  (+8 more)
