[project]
name = "aom-agent-a"
version = "0.1.0"
description = "Agent A — Macro Buyer. Locks funds against tasks, drives the demo loop."
requires-python = ">=3.11"
dependencies = [
    "aom-common",
    "web3>=6.20",
    "websockets>=13.0",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
aom-common = { path = "../common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aom_agent_a"]
