[project]
name = "aom-agent-b"
version = "0.1.0"
description = "Agent B — Geospatial Engine. Verifies proofs and claims escrow on trigger."
requires-python = ">=3.11"
dependencies = [
    "aom-common",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "web3>=6.20",
    "websockets>=13.0",
]

[tool.uv.sources]
aom-common = { path = "../common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
